fixed the accesibility of the website made sure the text had proper contrast from the pink background also properly fixed the cache for the github version accidentally broke that

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
   --tertiary-color: #f7ddde;
   --quaternary-color: #ffc4d0;
   --rgbabg: rgba(247, 221, 222, 0.3);
-  --text-color: #c9a105;
+  --text-color: #9c7d01;
   --font-size-100: 0.75rem;
   --font-size-200: 1rem;
   --font-size-300: 1.2rem;
